# AIMemory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
aimemory/: __init__.py
aimemory/backends/: __init__.py  defaults.py
aimemory/core/: __init__.py  domain_api.py  facade.py  governance.py  router.py  scoped.py  settings.py  text.py
aimemory/mcp/: adapter.py
aimemory/memory_intelligence/: models.py  pipeline.py  policies.py
aimemory/providers/: __init__.py  base.py  defaults.py  factory.py
aimemory/services/: archive_service.py  base.py  execution_service.py  interaction_service.py  knowledge_service.py  memory_service.py  projection_service.py  retrieval_service.py  skill_service.py
aimemory/storage/lancedb/: index_store.py
aimemory/storage/object_store/: local.py
aimemory/storage/sqlite/: database.py  runtime_schema.py  schema.py
aimemory/workers/: cleaner.py  compactor.py  distiller.py  governor.py
doc/: API_REFERENCE.md  QUICKSTART.md  facade-api.md  service-worker-api.md
tests/: test_acl_visibility.py  test_agent_domain_api.py  test_algorithmic_retrieval.py  test_context_handoff_reflection.py  test_memory_versioning.py  test_memorydb_refactor.py  test_platform_events.py  test_platform_llm_plugins.py  test_scoped_memory.py  test_structured_api.py
