[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimemory"
version = "0.4.0"
description = "Local-first, lightweight, agent-facing memory kernel for multi-agent collaboration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex CLI" }]
keywords = ["agent-memory", "mcp", "multi-agent", "sqlite", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["lmdb"]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.7.0"]
litellm = ["litellm>=1.52.0"]
mcp = ["mcp>=1.0.0"]
lancedb = ["lancedb>=0.16.0"]
faiss = ["faiss-cpu>=1.8.0"]
kuzu = ["kuzu>=0.5.0"]
all = [
  "sentence-transformers>=2.7.0",
  "litellm>=1.52.0",
  "mcp>=1.0.0",
  "lancedb>=0.16.0",
  "faiss-cpu>=1.8.0",
  "kuzu>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["aimemory*"]

[tool.setuptools]
include-package-data = true
